--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
     <title>Task</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="mr-auto navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                 <div class="navbar-nav text-uppercase">
-                    <ul class="nav d-flex nav_items1 mr-5">
+                    <ul class="navbar-nav nav_items1 mr-5">
                         <li class="nav-item"> <a href="#" class="nav-item nav-link">Home</a></li>
                         <li class="nav-item"> <a href="#" class="nav-item nav-link">about</a></li>
                         <li class="nav-item"> <a href="#" class="nav-item nav-link">properties</a></li>
                     </ul>
                     <a href="#"  class=" logo text-white font-weight-bold">logo.</a></li>
 
-                    <ul class="nav d-flex nav_items2 ml-5">
+                    <ul class="navbar-nav nav_items2 ml-5">
                         <li class="nav-item"> <a href="#" class="nav-item nav-link">agent</a></li>
                         <li class="nav-item"><a href="#"  class="nav-item nav-link">blog</a></li>
                         <li class="nav-item"> <a href="#" class="nav-item nav-link">contact</a></li>
-                        <ul class="nav d-flex nav_items">  
+                    </ul>  
                 </div>
             </div>
         </div>
